	  unencrypted channel
	* Fix XMPP SASL authentication error when using Cyrus and a connect server
	* Fix changing tab locations to update properly
	* Turning off "Show formatting on incoming messages" now ignores
	  formatting in <span> tags too
	* File transfer progress for transfers on MSN is now correctly displayed
	* You can set/change alias of buddies/chats by double-clicking on the
	  conversation tabs. (Ma Xuan)
	* Fix IRC connection bug with dircproxy (xjoe)

	Finch:
	* Userlist in chat windows, which can be turned on or off using
	  "/users" command
	* Menus in the conversation windows
	* Improved tab completion support
	* Ctrl+c prompts with a dialog before exiting
	* Filter string in the debug window
	* Notify when you leave a chat
	* Work around an ncurses bug which appears when half of a multi-cell
	  character is covered by an upper-level window
	* New plugins are shown in bold text in the plugin dialog

version 2.0.0 (5/3/2007):
	* The project has new names - libpurple for the core, Pidgin for the
	  GTK+ UI and Finch for the ncurses based console UI (AOL LLC)

	Build Changes:
	* With the Core/UI split complete, it is now possible to build
	  libpurple without any UIs, creating a library upon which other
	  UIs may be constructed
	* A new ncurses-based console UI called Finch is now available
	  (Sadrul Habib Chowdhury, Google Summer of Code)
	* Reorganized the source tree to split apart the code for the UI
	  changes and libpurple targets
	* libxml2 is now required.  We switched from gmarkup to libxml2 for
	  more correct XML parsing.

	Status System:
	* The code dealing with buddy and account status, away messages,
	  away states, online/offline, etc has been completely rewritten.
	  Huge thanks to Christian Hammond, Dave West, Daniel Atallah and
	  Sadrul Habib Chowdhury.
	* Your status can now be set from inside the buddy list using the
	  selector at the bottom of the window.
	* To see messages when a buddy signs on or off, goes away, or